--- a/sites/site_1/inventory.yml
+++ b/sites/site_1/inventory.yml
@@ -4,6 +4,7 @@ SITE1:
     CVP:
       hosts:
         cvp:
+          ansible_host: sat-auto-lab1-14-02fe320a-eos.topo.testdrive.arista.com
     SITE1_FABRIC:
       children:
         SITE1_SPINES:
@@ -16,6 +17,8 @@ SITE1:
             s1-leaf2:
             s1-leaf3:
             s1-leaf4:
+            s1-leaf5:
+            s1-leaf6:
     SITE1_FABRIC_SERVICES:
       children:
         SITE1_SPINES:
