--- a/sites/site_2/inventory.yml
+++ b/sites/site_2/inventory.yml
@@ -4,6 +4,7 @@ SITE2:
     CVP:
       hosts:
         cvp:
+          ansible_host: sat-auto-lab1-14-02fe320a-eos.topo.testdrive.arista.com
     SITE2_FABRIC:
       children:
         SITE2_SPINES:
